- 修改 example 样式 - 更新 SDK

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -37,18 +37,21 @@
         <title>Hello World</title>
     </head>
     <body>
-    <div id="buttons">
-        <button class="payBtn " name="wx">微信</button>
-        <br>
-        <button class="payBtn " name="alipay">支付宝</button>
-        <br>
-        <button class="payBtn " name="upacp">银联</button>
-        <br>
-        <button class="payBtn " name="qpay">QQ钱包</button>
-        <br>
-        <button id="setDebug" >开启 Debug 模式</button>
-        <br>
-        <button id="getVersion" >获取 SDK 版本号</button>
+    <div class="tit">Ping++ 移动支付</div>
+    <div class="conbor">     
+        <div id="buttons consj">
+            <div class="payBtn testbtn" name="wx">微信</div>
+            <br>
+            <div class="payBtn testbtn" name="alipay">支付宝</div>
+            <br>
+            <div class="payBtn testbtn" name="upacp">银联</div>
+            <br>
+            <div class="payBtn testbtn" name="qpay">QQ钱包</div>
+            <br>
+            <div id="setDebug" class="testbtn">开启 Debug 模式</div>
+            <br>
+            <div id="getVersion" class="testbtn">获取 SDK 版本号</button>
+        </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
